--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,4 @@
 
-
 body {
   background-color: #ff61b0;
   font-family: Futura;
@@ -7,13 +6,49 @@ body {
 
 }
 
-.panel {
 
-
-
-}
 .chosenActivity {
 
 
 
 }
+h2 {
+  font-size: 40px;
+  text-align: center;
+  padding: 50px;
+  color:#303030;
+}
+
+
+.panel {
+  font-size: 30px;
+  text-align: left;
+
+
+}
+.header {
+  font-size: 30px;
+
+
+}
+.introducktion {
+  text-align: center;
+
+
+}
+.information {
+  width: 50%;
+  height: 300px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  resize: none;
+  border-color: #555555;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+
+
