--- a/css/generisk.css
+++ b/css/generisk.css
@@ -13,14 +13,14 @@
   font-size: 50px;
 }
 
-#header {
+header {
   background-color: #ff61b0;
   color: white;
   text-align: left;
   padding: 50px 0;
 }
 
-#footer {
+footer {
   background-color: #ff61b0;
   color: white;
 }
