--- a/css/generisk.css
+++ b/css/generisk.css
@@ -23,8 +23,6 @@ header {
   padding: 10px 0;
 }
 
-
-
 .panel {
   margin: 0;
   list-style-type: none;
@@ -37,16 +35,25 @@ header {
 }
 
 footer {
-  background-color: #ff61b0;
-  color: white;
-  font-size: 20px;
-  display: inline-flex;
-
-
-
-
-
+  background-color: white;
+  color: #555555;
 }
+
+footer table {
+  text-align: center;
+  width: 60%;
+  margin: 30px auto;
+}
+
+footer a {
+  text-decoration: none;
+  color: #555555;
+}
+
+footer a:hover {
+  color: #ff61b0;
+}
+
 #loginHeader {
   text-align: center;
   color: white;
@@ -57,16 +64,14 @@ footer {
   width: 100px;
   margin: 10px;
   border: solid;
-
-
-
 }
+
 #shopHeader {
   margin-left: 100px;
   margin-right: 200px;
   color: #555555;
-
 }
+
 #pakkerHeader{
   text-align: left;
   margin-left: 100px;
