--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@
 
 .information {
   margin: auto 0;
-  margin-bottom: 100px;
+  margin-bottom: 500px;
   margin-top: 100px;
   text-decoration: underline;
 }
@@ -25,10 +25,15 @@
 .chosenActivity h3 {
   margin-top: 80px;
   margin-bottom: 40px;
+  text-decoration: underline;
+
 }
 .requirements {
   margin-top: 80px;
   float: left;
+
+
+
 
 
 }
@@ -37,7 +42,8 @@
   margin-left: 400px;
   margin-top: 80px;
   margin-bottom: 100px;
-  height: 100px;
+  height: 200px;
+  max-width: 100px;
 }
 #contentActivity {
   display: inline-block;
