Add changes in login.html, .js and .css

--- a/css/login.css
+++ b/css/login.css
@@ -20,6 +20,7 @@
   color: white;
   border-radius: 6px;
   background-color: #eb7cf6;
+  cursor: pointer;
 }
 
 #loginForm #email:focus::placeholder{
