are we now with branch?

--- a/css/booking.css
+++ b/css/booking.css
@@ -38,8 +38,12 @@
   cursor: pointer;
 }
 
-#bookingFormContent #participants:focus::placeholder {
+#bookingFormContent .input:focus::placeholder {
   color: transparent;
+}
+
+.input {
+  max-width: 170px;
 }
 
 .saveButton {
