--- a/css/booking.css
+++ b/css/booking.css
@@ -62,6 +62,22 @@
   cursor: pointer;
 }
 
+.deleteButton {
+  margin: 10px;
+  padding: 4px 8px;
+  border: solid 2px #ad0404;
+  border-radius: 5px;
+  background-color: #c4000000;
+  color: #ad0404;
+  font-weight: bold;
+}
+
+.deleteButton:hover {
+  background-color: #ad0404;
+  color: darkseagreen;
+  cursor: pointer;
+}
+
 #content table {
   margin: 0 auto;
   width: 80%;
