--- a/css/booking.css
+++ b/css/booking.css
@@ -83,7 +83,7 @@
   width: 80%;
 }
 
-#bookings {
+#content table {
   padding: 50px;
 }
 
@@ -92,12 +92,12 @@
   padding: 0 0 30px;
 }
 
-#bookings th {
+#tableBooking th {
   background-color: #0d7a0d;
   color: white;
 }
 
-#bookings tr:nth-child(even) {
+#tableBooking tr:nth-child(even) {
   background-color: rgba(253, 252, 248, 0.4);
 }
 
@@ -108,3 +108,14 @@
 #searchFormInput:focus::placeholder {
   color: transparent;
 }
+
+
+#searchTableBookings th {
+  background-color: #555555;
+  color: white;
+}
+
+#searchTableBookings tr:nth-child(even) {
+  background-color: rgba(253, 252, 248, 0.4);
+}
+
