--- a/css/booking.css
+++ b/css/booking.css
@@ -78,6 +78,22 @@
   cursor: pointer;
 }
 
+.editButton {
+  margin: 10px;
+  padding: 4px 8px;
+  border: solid 2px #0d7a0d;
+  border-radius: 5px;
+  background-color: #c4000000;
+  color: #0d7a0d;
+  font-weight: bold;
+}
+
+.editButton:hover {
+  background-color: #0d7a0d;
+  color: darkseagreen;
+  cursor: pointer;
+}
+
 #content table {
   margin: 0 auto;
   width: 80%;
