--- a/css/shopping.css
+++ b/css/shopping.css
@@ -9,7 +9,7 @@
   margin-top: 10px;
   line-height: 100px;
   border: 1px solid;
-  padding: 180px
+  padding: 0px;
 
 }
 
@@ -22,8 +22,7 @@
   margin-top: 10px;
   margin-bottom: 150px;
   border: 1px solid;
-  padding: 180px
-
+  padding: 0px;
 
 
 }
@@ -36,7 +35,7 @@
   margin-top: 10px;
   margin-bottom: 150px;
   border: 1px solid;
-  padding: 180px
+  padding: 0px;
 
 }
 
