--- a/css/generisk.css
+++ b/css/generisk.css
@@ -31,7 +31,7 @@ header .panel {
   background-color: white;
   display: block;
   text-align: center;
-  padding: 30px 0px;
+  padding: 30px 0;
   text-decoration: none;
 }
 
