--- a/css/booking.css
+++ b/css/booking.css
@@ -106,7 +106,9 @@
  h3 {
   font-size: 30px;
   padding: 0 0 30px;
-}
+  margin-top: 20px;
+  margin-bottom: 2px;
+ }
 
 #tableBooking th {
   background-color: #0d7a0d;
