--- a/css/shopping.css
+++ b/css/shopping.css
@@ -1,5 +1,3 @@
-
-
 .merch {
   width: 150px;
   text-align: center;
@@ -7,9 +5,8 @@
   margin-left: auto;
   margin-bottom: 150px;
   margin-top: 10px;
-  line-height: 100px;
   border: 1px solid;
-  padding: 150px;
+  padding: 100px;
 
 }
 
@@ -18,52 +15,37 @@
   margin-right: auto;
   margin-left: auto;
   text-align: center;
-  line-height: 100px;
   margin-top: 10px;
   margin-bottom: 150px;
   border: 1px solid;
-  padding: 150px;
-
-
+  padding: 100px;
 }
+
+.food th, .drinks th{
+  padding: 0 0 60px 0;
+}
+
 .drinks{
   width: 150px;
   margin-right: auto;
   margin-left: auto;
   text-align: center;
-  line-height: 100px;
   margin-top: 10px;
   margin-bottom: 150px;
   border: 1px solid;
-  padding: 150px;
-
-}
-
-h1{
-  font-size: 45px;
-  margin-bottom: 40px;
-
+  padding: 100px;
 }
 
 h2{
-  text-align: center;
-  margin-top: 60px;
-  font-size: 30px;
-
-
+  font-size: 45px;
+  margin-bottom: 40px;
 }
+
 h3{
   text-align: center;
-  margin-top: 100px;
-  margin-bottom: 50px;
-  font-size: 30px;
-}
-h4{
-  text-align: center;
-  margin-top: 100px;
-  margin-bottom: 50px;
-  font-size: 30px;
-
+  margin-top: 60px;
+  font-size: 40px;
+  padding-bottom: 20px;
 }
 
 #tshirt\ image {
